--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+$main-color: #ec3337;
+
+p, span {
+    color: #777777;
+    font-size: 16px;
+}
+
+#Container .mix{
+	display: none;
+}
+
+input.ng-touched.ng-invalid {
+    border-color: #dc3545;
+}
+
+.validation {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
+
